<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/ciel"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center"
        android:layout_marginTop="5dp">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_city_name"
            android:textColor="@color/white"
            android:background="@drawable/strock_edit_text"
            android:gravity="center"
            android:id="@+id/searchCityEditTxt"
            android:drawableStart="@drawable/ic_baseline_location_city_24"
            android:padding="10dp"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_search_24"
            android:id="@+id/searchIcon"
            android:layout_marginStart="5dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/london_gb"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:id="@+id/searchCityName"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/searchWeatherIcon"
            android:src="@color/black"
            android:contentDescription="@string/iconweather" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_20_41_c"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:id="@+id/searchWeatherValue"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/broken_clouds"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:id="@+id/searchWeatherDescription"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/darkBlue"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:id="@+id/searchHumidityValue"
            android:layout_marginStart="30dp"
            android:gravity="right"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_temp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/darkBlue"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_temp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:id="@+id/searchMax_tempValue"
            android:layout_marginStart="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_temp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/darkBlue"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_temp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:id="@+id/searchMin_tempValue"
            android:layout_marginStart="30dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/darkBlue"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_temp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:id="@+id/searchPressure"
            android:layout_marginStart="30dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/darkBlue"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:id="@+id/searchWindSpeedValue"
            android:layout_marginStart="30dp"/>
    </LinearLayout>

</LinearLayout>