<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/ciel"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/london_gb"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:id="@+id/cityName"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/weatherIcon"
            android:src="@color/black"
            android:contentDescription="@string/iconweather" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_20_41_c"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:id="@+id/weatherValue"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/broken_clouds"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:id="@+id/weatherDescription"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/darkBlue"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:id="@+id/humidityValue"
            android:layout_marginStart="30dp"
            android:gravity="right"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_temp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/darkBlue"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_temp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:id="@+id/max_tempValue"
            android:layout_marginStart="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_temp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/darkBlue"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_temp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:id="@+id/min_tempValue"
            android:layout_marginStart="30dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/darkBlue"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_temp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:id="@+id/pressure"
            android:layout_marginStart="30dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/darkBlue"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:id="@+id/windSpeedValue"
            android:layout_marginStart="30dp"/>
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:id="@+id/floatingActionBtn"
        android:src="@drawable/ic_baseline_add_24"/>

</LinearLayout>